<resources>
    <string name="app_name">PhishApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_email_text">Email</string>
    <string name="login_password_text">Password</string>
    <string name="login_button_text">Sign In</string>
    <string name="login_textView_text">Phish App</string>
    <string name="login_button_register">Register</string>
    <string name="register_retype_password">Retype Password</string>
    <string name="credential_key">credential_key</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Phish App</string>
    <string name="nav_header_subtitle">TCSS 450 Labs</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="fragment_blogpost_fullpost">Full Post</string>
    <string name="blogPost_key">blog_key</string>
    <string name="action_logout">Logout</string>
    <string name="setPost_key">set_key</string>
    <string name="register_firstname">First Name</string>
    <string name="register_lastname">Last Name</string>
    <string name="username">Username</string>
    <string name="fragment_setpost_fullpost">Full Post</string>
</resources>
